# daily-dashboard

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  rustfmt.toml
.config/: config.json5
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  dashboard.rs  errors.rs  http.rs  logging.rs  main.rs  theme.rs  tui.rs
src/components/: calendar.rs  dictionary.rs  fps.rs  greeting.rs  home.rs  inspiration.rs  news.rs  picture_frame.rs  weather.rs  wikipedia.rs
src/tests/: config.rs  dictionary.rs  greeting.rs  http.rs  inspiration.rs  news.rs  picture_frame.rs  weather.rs  wikipedia.rs
